--- a/lang/en.json
+++ b/lang/en.json
@@ -12,5 +12,6 @@
   "date": "Date",
   "add": "Add",
   "example": "Example",
-  "calendar_search": "Calendar Search"
+  "calendar_search": "Calendar Search",
+  "links": "Link"
 }
