--- a/lang/ja.json
+++ b/lang/ja.json
@@ -12,5 +12,6 @@
   "date": "年月",
   "add": "追加",
   "example": "例",
-  "calendar_search": "カレンダー検索"
+  "calendar_search": "カレンダー検索",
+  "links": "関連リンク"
 }
