--- a/lang/ja.json
+++ b/lang/ja.json
@@ -13,5 +13,9 @@
   "add": "追加",
   "example": "例",
   "calendar_search": "カレンダー検索",
-  "links": "関連リンク"
+  "links": "関連リンク",
+  "analyze": "分析",
+  "itemsByYear": "年ごとのアイテム数",
+  "item": "アイテム",
+  "itemsByDay": "曜日ごとのアイテム数"
 }
