feat: add stats

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,7 +14,7 @@
   "example": "Example",
   "calendar_search": "Calendar Search",
   "links": "Link",
-  "analyze": "Analyze",
+  "stats": "Statistics",
   "itemsByYear": "Number of items by year",
   "item": "Item",
   "itemsByDay": "Number of items by day of the week"
