--- a/lang/ja.json
+++ b/lang/ja.json
@@ -14,7 +14,7 @@
   "example": "例",
   "calendar_search": "カレンダー検索",
   "links": "関連リンク",
-  "analyze": "分析",
+  "stats": "統計",
   "itemsByYear": "年ごとのアイテム数",
   "item": "アイテム",
   "itemsByDay": "曜日ごとのアイテム数"
